--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   json_annotation: ^4.8.1
   cached_network_image: ^3.2.3
   font_awesome_flutter: ^10.5.0
+  cloud_firestore: ^4.9.2
+  firebase_storage: ^11.2.7
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
