--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,26 +27,29 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
-  cupertino_icons: ^1.0.2
-  auto_route: ^7.8.3
-  video_player: ^2.7.1
+  cupertino_icons: ^1.0.6
+  auto_route: ^7.8.4
+  video_player: ^2.7.2
   flutter_bloc: ^8.1.3
+  get_it: ^7.6.4
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
-  cached_network_image: ^3.2.3
+  cached_network_image: ^3.3.0
   font_awesome_flutter: ^10.5.0
-  cloud_firestore: ^4.9.2
-  firebase_storage: ^11.2.7
+  firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
+  cloud_firestore: ^4.9.3
+  firebase_storage: ^11.2.8
   image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  auto_route_generator: ^7.3.1
+  auto_route_generator: ^7.3.2
   build_runner: ^2.4.6
-  flutter_lints: ^2.0.0
-  freezed: ^2.4.2
+  flutter_lints: ^2.0.3
+  freezed: ^2.4.5
   json_serializable: ^6.7.1
 
 flutter:
