--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.6
+  path_provider: ^2.1.1
   auto_route: ^7.8.4
   video_player: ^2.7.2
   flutter_bloc: ^8.1.3
