--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   cupertino_icons: ^1.0.6
   path_provider: ^2.1.1
   auto_route: ^7.8.4
-  video_player: ^2.7.2
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
   freezed_annotation: ^2.4.1
@@ -41,7 +40,9 @@ dependencies:
   firebase_auth: ^4.10.1
   cloud_firestore: ^4.9.3
   firebase_storage: ^11.2.8
+  video_player: ^2.7.2
   image_picker: ^1.0.4
+  video_compress: ^3.1.2
 
 dev_dependencies:
   flutter_test:
