--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   video_player: ^2.7.2
   image_picker: ^1.0.4
   video_compress: ^3.1.2
+  flick_video_player: ^0.5.0
 
 dev_dependencies:
   flutter_test:
