--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.0.4
   video_compress: ^3.1.2
   flick_video_player: ^0.5.0
+  visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   flutter_test:
