--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   video_compress: ^3.1.2
   flick_video_player: ^0.5.0
   visibility_detector: ^0.4.0+2
+  pull_to_refresh: ^2.0.0
 
 dev_dependencies:
   flutter_test:
