--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   flick_video_player: ^0.5.0
   visibility_detector: ^0.4.0+2
   pull_to_refresh: ^2.0.0
-  sliver_fill_remaining_box_adapter: ^1.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
