--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,11 +44,12 @@ dependencies:
   video_player: ^2.7.2
   image_picker: ^1.0.4
   video_compress: ^3.1.2
-  flick_video_player: ^0.5.0
+  flick_video_player: ^0.7.0
   visibility_detector: ^0.4.0+2
   pull_to_refresh: ^2.0.0
   shared_preferences: ^2.2.2
   intl: ^0.18.1
+  share_plus: ^6.3.4
 
 dev_dependencies:
   flutter_test:
